--- a/uniapp.html
+++ b/uniapp.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GhUniApplicationTips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -21,9 +20,9 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
+             <!--     <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" href="#">Features</a>
+                  <a class="nav-link active" href="#">Pricing</a> -->
                 </div>
               </div>
             </div>
@@ -52,23 +51,23 @@
                     <div class="card-body">
                         <h5 class="card-title">Obtain a Degree with weak WASSCE grades at the University of Ghana.</h5>
                         <p class="card-text">You can still obtain a degree with weak WASSCE grades at the University of Ghana and even continue with Masters & PhD.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="https://www.youtube.com/watch?v=7TBZAiIz58c&t=24s" target="_blank" class="btn btn-primary">Watch Video</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="yttm2.jpg" class="card-img-top" alt="youtube thumbnail">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">New Online Application Changes for General Arts Students</h5>
+                      <p class="card-text">The University of Ghana has introduced some new features into the programme selection page. This video is to show you all theses new features and what you should expect when applying online.</p>
+                      <a href="https://www.youtube.com/watch?v=EI-ab65fHHw&t=1s" class="btn btn-primary">Watch Video</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
                     <img src="yttm3.jpg" class="card-img-top" alt="youtube thumbnail">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">You will get SACKED from the University for this SIX Offences</h5>
+                      <p class="card-text">So, the utmost desire of every student is to reach the highest level of the academic ladder. However some students along the line get into trouble with the university authorities which leads to the end of their tertiary education.</p>
+                      <a href="#" class="btn btn-primary">Watch Video</a>
                     </div>
                   </div>
             </div>
