--- a/uniapp.html
+++ b/uniapp.html
@@ -20,9 +20,9 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-             <!--     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link active" href="#">Features</a>
-                  <a class="nav-link active" href="#">Pricing</a> -->
+                  <a class="nav-link active" aria-current="page" href="#our-mission">Our Mission</a>
+                  <a class="nav-link active" href="#work">Our Work</a>
+                  <a class="nav-link active" href="#contact">Contact Us</a>
                 </div>
               </div>
             </div>
@@ -35,7 +35,7 @@
                     <img src="ug.jpg" alt="ug balme library" class="img-fluid">
                 </div>
                 <div class="col-md-6">
-                    <h1>Our Mission</h1>
+                    <h1 id="our-mission">Our Mission</h1>
                     <p class="mt-4">GhUniApplicationTips is a channel to guide all prospective applicants who want to apply to any of the top Universities in Ghana such as UG, KNUST, UCC, UDS, UEW, VVU, GIMPA, Ashesi University and many others.</p>
                     <a href="https://www.youtube.com/c/GhUniApplicationTips" target="_blank"><button type="button" class="btn btn-primary mt-3">Visit Our YouTube Channel</button></a>
                 </div>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="row">
-              <div class="card-group">
+              <div class="card-group" id="work">
                 <div class="card">
                   <img src="yttm.jpg" class="card-img-top" alt="youtube thumbnail">
                   <div class="card-body">
@@ -77,7 +77,7 @@
               </div>
             </div>
             <div class="row mt-5 container">
-              <h1 align="center">Contact Us</h1>
+              <h1 align="center" id="contact">Contact Us</h1>
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
