changed fonts to montserrat

--- a/uniapp.html
+++ b/uniapp.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GhUniApplicationTips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+      body{
+        font-family: "montserrat", sans-serif;
+      }
+    </style>
 </head>
 <body>
     <header>
@@ -50,7 +56,7 @@
                 <div class="card">
                   <img src="yttm.jpg" class="card-img-top" alt="youtube thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">Obtain a Degree with weak WASSCE grades at the University of Ghana.</h5>
+                    <h5 class="card-title"><strong>Obtain a Degree with weak WASSCE grades at the University of Ghana</strong></h5>
                     <p class="card-text">You can still obtain a degree with weak WASSCE grades at the University of Ghana and even continue with Masters & PhD.</p>
                     <a href="https://www.youtube.com/watch?v=7TBZAiIz58c&t=24s" target="_blank" class="btn btn-primary">Watch Video</a>
                     <p class="card-text mt-3"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -59,7 +65,7 @@
                 <div class="card">
                   <img src="yttm2.jpg" class="card-img-top" alt="youtube thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">New Online Application Changes for General Arts Students</h5>
+                    <h5 class="card-title"><strong>New Online Application Changes for General Arts Students</strong></h5>
                     <p class="card-text">The University of Ghana has introduced some new features into the programme selection page. This video is to show you all theses new features and what you should expect when applying online.</p>
                     <a href="https://www.youtube.com/watch?v=EI-ab65fHHw&t=1s" target="_blank" class="btn btn-primary">Watch Video</a>
                     <p class="card-text mt-3"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -68,7 +74,7 @@
                 <div class="card">
                   <img src="yttm3.jpg" class="card-img-top" alt="youtube thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">You will get SACKED from the University for this SIX Offences</h5>
+                    <h5 class="card-title"><strong>You will get SACKED from the University for this SIX Offences</strong></h5>
                     <p class="card-text">So, the utmost desire of every student is to reach the highest level of the academic ladder. However some students along the line get into trouble with the university authorities which leads to the end of their tertiary education.</p>
                     <a href="https://www.youtube.com/watch?v=8BaMU984Vw8&t=71s" target="_blank" class="btn btn-primary">Watch Video</a>
                     <p class="card-text mt-3"><small class="text-muted">Last updated 3 mins ago</small></p>
